--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -27,7 +27,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets", "src/manifest.webmanifest"],
             "styles": ["src/styles/main.css"],
-            "scripts": []
+            "scripts": ["node_modules/webrtc-adapter/out/adapter.js"]
           },
           "configurations": {
             "production": {
