--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@ericblade/quagga2": "^1.6.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
+    "webrtc-adapter": "^8.1.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
